text alignment correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,6 @@ footer {
 }
 
 .container p {
-    float: left;
     overflow: auto;
 }
 
